refactor: used java 8+ collection methods instead of creating new hashmap